--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       "32": "icon.png"
     }
   },
-  "permissions": ["storage", "declarativeNetRequest", "scripting", "activeTab"],
+  "permissions": ["storage", "activeTab"],
   "icons": {
     "128": "icon.png",
     "16": "icon.png",
@@ -25,7 +25,7 @@
     {
       "js": ["src/content/content.ts"],
       "matches": ["<all_urls>"],
-      "run_at": "document_end"
+      "run_at": "document_start"
     }
   ],
   "options_page": "src/options/index.html"
