--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       "32": "icon.png"
     }
   },
-  "permissions": ["storage", "activeTab", "declarativeNetRequest"],
+  "permissions": ["storage", "activeTab", "webNavigation"],
   "icons": {
     "128": "icon.png",
     "16": "icon.png",
@@ -26,6 +26,12 @@
       "js": ["src/content/content.ts"],
       "matches": ["<all_urls>"],
       "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["src/background/blocked.html"],
+      "matches": ["<all_urls>"]
     }
   ],
   "options_page": "src/options/index.html"
